Bug 1291856 - push clip before drawing GTK3 widgets. r=acomminos

MozReview-Commit-ID: 84Y8sBg7NzF